Fix design issues

--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -4,7 +4,7 @@ block content
   //- Movie List Summary Section
   section.jumbotron.text-center.bg-dark
     .container
-      h1.jumbotron-heading-text Feature Films
+      h1.jumbotron-heading-text={title} Feature Films
       p.lead.text-white
         | All movies will have a synopsis, schedule for show times, and list of actors/actresses starring in it.
     br
@@ -20,7 +20,7 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster1.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
               h6.card-subtitle.text-muted.pt-1.float-left Daily show times
           br
@@ -32,7 +32,7 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster2.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
               h6.card-subtitle.text-muted.pt-1.float-left Daily show times
           br
@@ -44,7 +44,7 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster3.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
               h6.card-subtitle.text-muted.pt-1.float-left Daily show times
           br
@@ -56,7 +56,7 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster4.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
               h6.card-subtitle.text-muted.pt-1.float-left Daily show times
           br
@@ -68,7 +68,7 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster5.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
               h6.card-subtitle.text-muted.pt-1.float-left Daily show times
           br
@@ -80,7 +80,7 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster6.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
               h6.card-subtitle.text-muted.pt-1.float-left Daily show times
           br
@@ -92,7 +92,7 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster7.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
               h6.card-subtitle.text-muted.pt-1.float-left Daily show times
           br
@@ -104,7 +104,7 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster8.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
               h6.card-subtitle.text-muted.pt-1.float-left Daily show times
           br
@@ -116,9 +116,12 @@ block content
                   //.panel-heading Anatomy Of A Murder
                   .panel-body
                     img.img-responsive.img-rounded(src="./images/moviePoster9.jpg", style="width:75%", alt="Movie Poster #1")
-              a.card-link.btn.btn-info.float-right(href="/movies") Info
+              a.card-link.btn.btn-info.float-right(href="/movies") Synopsis
               br
-              h6.card-subtitle.text-muted.pt-1.float-left Daily show times
+              h6.card-subtitle.text-muted.pt-1.float-left Daily Show Times & Info
+              
+
+
     br
     br
 //-
