--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -4,13 +4,79 @@ block content
   //- Movie List Summary Section
   section.jumbotron.text-center.bg-dark
     .container
-      h1.jumbotron-heading-text={title} Feature Films
+      h1.jumbotron-heading-text Feature Films
       p.lead.text-white
         | All movies will have a synopsis, schedule for show times, and list of actors/actresses starring in it.
     br
     br
     .container
       .row
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster1.jpg", alt="movie poster 1", style="width:100%")
+            .caption
+              p.text-white Starring: Elvis Presley, Ann Margret, and Cesare Danova
+          br
+          br
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster2.jpg", alt="movie poster 2", style="width:100%")
+            .caption
+              p.text-white Starring: John Wayne, Earle Hodgins, and Yakima Canutt
+          br
+          br
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster3.jpg", alt="movie poster 3", style="width:100%")
+            .caption
+              p.text-white Starring: Marlon Brando, Jean Simmons, Frank Sinatra, and Vivian Blaine
+          br
+          br
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster4.jpg", alt="movie poster 4", style="width:100%")
+            .caption
+              p.text-white Starring: Robert Cornthwaite, Kenneth Tobey, and James Arness
+          br
+          br
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster5.jpg", alt="movie poster 5", style="width:100%")
+            .caption
+              p.text-white Starring: Lori Nelson, John Smith, Frank Gorshin, Fred Essler, and Chuck Connors
+          br
+          br
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster6.jpg", alt="movie poster 6", style="width:100%")
+            .caption
+              p.text-white Starring: Yvonne Lime, Gary Clarke, Fay Wray, Bob Turnbull, and Connie Stevens
+          br
+          br
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster7.jpg", alt="movie poster 7", style="width:100%")
+            .caption
+              p.text-white Starring: Marcello Mastroianni, Yvonne Furneaux, Anouk Aimee, and Anita Ekberg
+          br
+          br
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster8.jpg", alt="movie poster 8", style="width:100%")
+            .caption
+              p.text-white Starring: James Stewart and Kim Novak
+          br
+          br
+        .col-6.col-md-4
+          .thumbnail
+            img.img-responsive(src="./images/moviePoster9.jpg", alt="movie poster 9", style="width:100%")
+            .caption
+              p.text-white Starring: Frank Sinatra, Dean Martin, Sammy Davis JR, Peter Lawford, and Angie Dickinson
+              
+              
+              
+        
+      //- UNDO THIS IF THE ABOVE DOES NOT WORK!!!
         .col-12.col-md-8
           .card.mt-2
             .card-body
@@ -121,9 +187,6 @@ block content
               h6.card-subtitle.text-muted.pt-1.float-left Daily Show Times & Info
               
 
-
-    br
-    br
 //-
    .row
     .col-12-.col-md-8
