Add info buttons to movies page

--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -16,6 +16,8 @@ block content
             img.img-responsive(src="./images/moviePoster1.jpg", alt="movie poster 1", style="width:100%")
             .caption
               p.text-white Starring: Elvis Presley, Ann Margret, and Cesare Danova
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
           br
           br
         .col-6.col-md-4
@@ -23,6 +25,8 @@ block content
             img.img-responsive(src="./images/moviePoster2.jpg", alt="movie poster 2", style="width:100%")
             .caption
               p.text-white Starring: John Wayne, Earle Hodgins, and Yakima Canutt
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
           br
           br
         .col-6.col-md-4
@@ -30,6 +34,8 @@ block content
             img.img-responsive(src="./images/moviePoster3.jpg", alt="movie poster 3", style="width:100%")
             .caption
               p.text-white Starring: Marlon Brando, Jean Simmons, Frank Sinatra, and Vivian Blaine
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
           br
           br
         .col-6.col-md-4
@@ -37,6 +43,8 @@ block content
             img.img-responsive(src="./images/moviePoster4.jpg", alt="movie poster 4", style="width:100%")
             .caption
               p.text-white Starring: Robert Cornthwaite, Kenneth Tobey, and James Arness
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
           br
           br
         .col-6.col-md-4
@@ -44,6 +52,8 @@ block content
             img.img-responsive(src="./images/moviePoster5.jpg", alt="movie poster 5", style="width:100%")
             .caption
               p.text-white Starring: Lori Nelson, John Smith, Frank Gorshin, Fred Essler, and Chuck Connors
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
           br
           br
         .col-6.col-md-4
@@ -51,6 +61,8 @@ block content
             img.img-responsive(src="./images/moviePoster6.jpg", alt="movie poster 6", style="width:100%")
             .caption
               p.text-white Starring: Yvonne Lime, Gary Clarke, Fay Wray, Bob Turnbull, and Connie Stevens
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
           br
           br
         .col-6.col-md-4
@@ -58,6 +70,8 @@ block content
             img.img-responsive(src="./images/moviePoster7.jpg", alt="movie poster 7", style="width:100%")
             .caption
               p.text-white Starring: Marcello Mastroianni, Yvonne Furneaux, Anouk Aimee, and Anita Ekberg
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
           br
           br
         .col-6.col-md-4
@@ -65,6 +79,8 @@ block content
             img.img-responsive(src="./images/moviePoster8.jpg", alt="movie poster 8", style="width:100%")
             .caption
               p.text-white Starring: James Stewart and Kim Novak
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
           br
           br
         .col-6.col-md-4
@@ -72,6 +88,8 @@ block content
             img.img-responsive(src="./images/moviePoster9.jpg", alt="movie poster 9", style="width:100%")
             .caption
               p.text-white Starring: Frank Sinatra, Dean Martin, Sammy Davis JR, Peter Lawford, and Angie Dickinson
+            a.btn-link(href="/movies")
+              button.btn.btn-warning(type="button") Info
               
               
               
