Move view data to controller

--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -11,12 +11,9 @@ html
   body
     //- Atomic Films Brand Section
     .container-fluid#afBrandMotto
-      .atomicFilms-brand-text.float-left Atomic Films
-          //- Movie Projector icon credit and creation by Icons8 => https://icons8.com/icon/set/movie/all
-          //img(src="https://png.icons8.com/movie-projector/color/48", title="Movie Projector", width="48", height="48")
+      .atomicFilms-brand-text.float-left= title
       .row.py-3
         .col-12.col-md-10
-          p.af-header-font.text-center ...Enjoy the classics of yesterday!
     //- Navbar Nav Items
     nav.navbar.navbar-expand-md.navbar-dark
       .container  
