--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -4,9 +4,8 @@ block content
   //- Movie List Summary Section
   section.jumbotron.text-center.bg-dark
     .container
-      h1.jumbotron-heading-text Feature Films
-      p.lead.text-white
-        | All movies will have a synopsis, schedule for show times, and list of actors/actresses starring in it.
+      h1.jumbotron-heading-text= pageHeader.title
+      p.lead.text-white= pageHeader.tagline
     br
     br
     .container
