--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -12,7 +12,7 @@ block content
       .row
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster1.jpg", alt="movie poster 1")
+            img.img-responsive.w-100(src="./images/mp1.jpg", alt="movie poster 1")
             br
             br
             a.btn-link(href="/movies")
@@ -21,7 +21,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster2.jpg", alt="movie poster 2")
+            img.img-responsive.w-100(src="./images/mp2.jpg", alt="movie poster 2")
             br
             br
             a.btn-link(href="/movies")
@@ -30,7 +30,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster3.jpg", alt="movie poster 3")
+            img.img-responsive.w-100(src="./images/mp3.jpg", alt="movie poster 3")
             br
             br
             a.btn-link(href="/movies")
@@ -39,7 +39,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster4.jpg", alt="movie poster 4")
+            img.img-responsive.w-100(src="./images/mp4.jpg", alt="movie poster 4")
             br
             br
             a.btn-link(href="/movies")
@@ -48,7 +48,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster5.jpg", alt="movie poster 5")
+            img.img-responsive.w-100(src="./images/mp5.jpg", alt="movie poster 5")
             br
             br
             a.btn-link(href="/movies")
@@ -57,7 +57,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster6.jpg", alt="movie poster 6")
+            img.img-responsive.w-100(src="./images/mp6.jpg", alt="movie poster 6")
             br
             br
             a.btn-link(href="/movies")
@@ -66,7 +66,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster7.jpg", alt="movie poster 7")
+            img.img-responsive.w-100(src="./images/mp11.jpg", alt="movie poster 7")
             br
             br
             a.btn-link(href="/movies")
@@ -75,7 +75,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster8.jpg", alt="movie poster 8")
+            img.img-responsive.w-100(src="./images/mp12.jpg", alt="movie poster 8")
             br
             br
             a.btn-link(href="/movies")
@@ -84,7 +84,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/moviePoster9.jpg", alt="movie poster 9")
+            img.img-responsive.w-100(src="./images/mp9.jpg", alt="movie poster 9")
             br
             br
             a.btn-link(href="/movies")
