--- a/app/app_server/views/contact.pug
+++ b/app/app_server/views/contact.pug
@@ -1,13 +1,15 @@
 extends layout
 
 block content
-  section.jumbotron.text-center.bg-dark
+  section.jumbotron.text-center
     .container
       h1.jumbotron-heading-text= pageHeader.title
+      br
+      br
+      p.lead.text-white= pageHeader.formTagline
     br
     .card
       .card-body.bg-dark
-        h4.card-title-text.pb-5.text-justify= pageHeader.tagline
         //- WILL NEED TO ADD A /THANKS PAGE TO CONTROLLER IN FUTURE!!!
         form(name="contact", action="/thanks", method="post") 
           .form-group.row
@@ -24,5 +26,36 @@ block content
               textarea#message.form-control(rows="5", name="message", required, placeholder="Type your message")
           .form-group.row
             label.col-form-label.col-sm-2
-              .col-sm-6
-                button.btn.btn-info(type="submit") Send Message
+            .col-sm-6
+              button.btn.btn-info(type="submit") Send Message
+              
+              
+              
+              
+    //-
+      block content
+        section.jumbotron.text-center
+          .container
+            h1.jumbotron-heading-text= pageHeader.title
+            p.lead.text-white= pageHeader.formTagline
+          br
+          .card
+            .card-body.bg-dark
+              //- WILL NEED TO ADD A /THANKS PAGE TO CONTROLLER IN FUTURE!!!
+              form(name="contact", action="/thanks", method="post") 
+                .form-group.row
+                  label.col-form-label.col-sm-2.text-white(for="email") Email:
+                  .col-sm-6
+                    input#email.form-control(type="email", name="email", required, placeholder="Enter your email address")
+                .form-group.row
+                  label.col-form-label.col-sm-2.text-white(for="name") Name:
+                  .col-sm-6
+                    input#name.form-control(type="text", name="name", required, placeholder="Enter your name")
+                .form-group.row
+                  label.col-form-label.col-sm-2.text-white(for="message") Message:
+                  .col-sm-10
+                    textarea#message.form-control(rows="5", name="message", required, placeholder="Type your message")
+                .form-group.row
+                  label.col-form-label.col-sm-2
+                    .col-sm-6
+                      button.btn.btn-info(type="submit") Send Message
