--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  //- Movie List Summary Section
+  //- Feature Films Section
   section.jumbotron.text-center
     .container
       h1.jumbotron-heading-text= pageHeader.title
@@ -12,7 +12,7 @@ block content
       .row
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp1.jpg", alt="movie poster 1")
+            img.img-responsive.w-100(src="./images/mp1.jpg")
             br
             br
             a.btn-link(href="/movies")
@@ -21,7 +21,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp2.jpg", alt="movie poster 2")
+            img.img-responsive.w-100(src="./images/mp2.jpg")
             br
             br
             a.btn-link(href="/movies")
@@ -30,7 +30,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp3.jpg", alt="movie poster 3")
+            img.img-responsive.w-100(src="./images/mp3.jpg")
             br
             br
             a.btn-link(href="/movies")
@@ -39,7 +39,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp4.jpg", alt="movie poster 4")
+            img.img-responsive.w-100(src="./images/mp4.jpg")
             br
             br
             a.btn-link(href="/movies")
@@ -48,7 +48,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp5.jpg", alt="movie poster 5")
+            img.img-responsive.w-100(src="./images/mp5.jpg")
             br
             br
             a.btn-link(href="/movies")
@@ -57,7 +57,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp6.jpg", alt="movie poster 6")
+            img.img-responsive.w-100(src="./images/mp6.jpg")
             br
             br
             a.btn-link(href="/movies")
@@ -66,7 +66,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp11.jpg", alt="movie poster 7")
+            img.img-responsive.w-100(src="./images/mp11.jpg")
             br
             br
             a.btn-link(href="/movies")
@@ -75,7 +75,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp12.jpg", alt="movie poster 8")
+            img.img-responsive.w-100(src="./images/mp12.jpg")
             br
             br
             a.btn-link(href="/movies")
@@ -84,7 +84,7 @@ block content
           br
         .col-6.col-md-4
           .thumbnail
-            img.img-responsive.w-100(src="./images/mp9.jpg", alt="movie poster 9")
+            img.img-responsive.w-100(src="./images/mp9.jpg")
             br
             br
             a.btn-link(href="/movies")
