--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  section.jumbotron.text-center.bg-dark
+  section.jumbotron.text-center
     .container
       h1.jumbotron-heading-text= pageHeader.title
       p.lead.text-white= pageHeader.tagline
