--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  section.jumbotron.text-center.bg-dark
+  //- Movie Synopsis Section
+  section.jumbotron.text-center
     .container
       h1.jumbotron-heading-text= pageHeader.title
       p.lead.text-white= pageHeader.tagline
@@ -10,36 +11,12 @@ block content
     //- Add ".movie" above the .container below to get rid of coloured background.
     .container
       .row
-        .card
+        .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Viva Las Vegas (1964)
-          img.img-responsive.mx-auto.d-block(src="./images/mp1.jpg", style="width:35%" alt="Viva Las Vegas poster")
+          h4.card-title-text.text-warning.text-center Casablanca (YEAR)
+          img.img-responsive.mx-auto.d-block(src="./images/mp1.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center
-            | All musically gifted racecar-driver Lucky Jackson (Elvis Presley) wants in Las Vegas is to score enough money for a new car motor, so he can win the Grand Prix. When he encounters sexy swimming instructor Rusty Martin (Ann-Margret), he considers staying around longer. After Lucky loses his winnings in the hotel pool, he's forced to remain in Vegas long enough to win back his dough -- but now he also wants to win Rusty's heart. Unfortunately, so does his slick racing enemy, Elmo Mancini (Cesare Danova).
-          br
-          .container
-            .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
-              .btn-group.mr-2(role="group", aria-label="First Show Time")
-                a.btn-link(href="/movies/reserve")
-                  button.btn.btn-dark(type="button") 10:00 A.M.
-              .btn-group.mr-2(role="group", aria-label="Second Show Time")
-                a.btn-link(href="/movies/reserve")
-                  button.btn.btn-dark(type="button") 1:00 P.M.
-              .btn-group.mr-2(role="group", aria-label="Third Show Time")
-                a.btn-link(href="/movies/reserve")
-                  button.btn.btn-dark(type="button") 4:00 P.M.
-          br
-      br
-      br
-      .row
-        .card
-          br
-          h4.card-title-text.text-warning.text-center Paradise Canyon (1935)
-          img.img-responsive.mx-auto.d-block(src="./images/mp2.jpg", style="width:35%", alt="Paradise Canyon poster")
-          br
-          p.card-text.text-justify-content-center
-            | John Wyatt (John Wayne) is a government agent sent to smash a counterfeiting operation near the USA/Mexican border. Joining Doc Carter's (Earle Hodgins) medicine show, they arrive in the town where Curly Joe (Yakima Canutt), who once framed Carter, resides. Learning that Curly Joe is the counterfeiter, Wyatt goes after the man himself.
+          p.card-text.text-justify-content-center TEXT HERE...
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -56,13 +33,34 @@ block content
       br
       br
       .row
-        .card
+        .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Guys And Dolls (1955)
-          img.img-responsive.mx-auto.d-block(src="./images/mp3.jpg", style="width:35%", alt="Guys And Dolls poster")
+          h4.card-title-text.text-warning.text-center One Flew Over The Cuckoo's Nest (1972)
+          img.img-responsive.mx-auto.d-block(src="./images/mp2.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center
-            | Gambler Nathan Detroit (Frank Sinatra) has few options for the location of his big craps game. Needing $1,000 to pay a garage owner to host the game, Nathan bets Sky Masterson (Marlon Brando) that Sky cannot get virtuous Sarah Brown (Jean Simmons) out on a date. Despite some resistance, Sky negotiates a date with her in exchange for bringing people into her mission. Meanwhile, Nathan's longtime fiancée, Adelaide (Vivian Blaine), wants him to go legit and marry her.
+          p.card-text.text-justify-content-center TEXT HERE...
+          br
+          .container
+            .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
+              .btn-group.mr-2(role="group", aria-label="First Show Time")
+                a.btn-link(href="/movies/reserve")
+                  button.btn.btn-dark(type="button") 11:00 A.M.
+              .btn-group.mr-2(role="group", aria-label="Second Show Time")
+                a.btn-link(href="/movies/reserve")
+                  button.btn.btn-dark(type="button") 2:00 P.M.
+              .btn-group.mr-2(role="group", aria-label="Third Show Time")
+                a.btn-link(href="/movies/reserve")
+                  button.btn.btn-dark(type="button") 5:00 P.M.
+          br
+      br
+      br
+      .row
+        .card.w-100.bg-secondary
+          br
+          h4.card-title-text.text-warning.text-center A Clockwork Orange (YEAR)
+          img.img-responsive.mx-auto.d-block(src="./images/mp3.jpg", style="width:40%")
+          br
+          p.card-text.text-justify-content-center TEXT HERE...
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -79,13 +77,12 @@ block content
       br
       br
       .row
-        .card
+        .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center The Thing (From Another World) (1951)
-          img.img-responsive.mx-auto.d-block(src="./images/mp4.jpg", style="width:35%", alt="The Thing poster")
+          h4.card-title-text.text-warning.text-center Wizard Of Oz (YEAR)
+          img.img-responsive.mx-auto.d-block(src="./images/mp4.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center
-            | When scientist Dr. Carrington (Robert Cornthwaite) reports a UFO near his North Pole research base, the Air Force sends in a team under Capt. Patrick Hendry (Kenneth Tobey) to investigate. What they find is a wrecked spaceship and a humanoid creature (James Arness) frozen in the ice. They bring their discovery back to the base, but Carrington and Hendry disagree over what to do with it. Meanwhile, the creature is accidentally thawed and begins wreaking havoc.
+          p.card-text.text-justify-content-center TEXT HERE...
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -102,13 +99,12 @@ block content
       br
       br
       .row
-        .card.mx-auto
+        .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Hot-Rod Girl (1956)
-          img.img-resonsive.mx-auto.d-block(src="./images/mp5.jpg", style="width:35%", alt="Hot-Rod Girl poster")
+          h4.card-title-text.text-warning.text-center The Godfather (YEAR)
+          img.img-resonsive.mx-auto.d-block(src="./images/mp5.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center
-            | Lisa (Lori Nelson) is worried about her fiancé Jeff (John Smith) after the death of his brother in illegal street racing. Flat Top (Frank Gorshin) and the other hot rodders, who hang out at Yo-Yo’s (Fred Essler) burger joint, only went to the police sponsored dragstrip, because of Jeff urging them, but now he does not want anything to do with it. It is only a matter of time, before Police Detective Ben Merrill (Chuck Connors) has another accident, to clean up, when Bronc Talbot (Mark Andrews) rolls into town and goads them into playing chicken.
+          p.card-text.text-justify-content-center TEXT HERE...
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -125,13 +121,12 @@ block content
       br
       br
       .row
-        .card
+        .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Dragstrip Riot (1958)
-          img.img-responsive.mx-auto.d-block(src="./images/mp6.jpg", style="width:35%", alt="Dragstrip Riot")
+          h4.card-title-text.text-warning.text-center 2001: A Space Odyssey (YEAR)
+          img.img-responsive.mx-auto.d-block(src="./images/mp6.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center
-            | In a beach community near Malibu, California, teenager Rick Martin promises his mother he won't get into any more fights — especially like the one that put him in jail a few months back. But when a motorcycle gang begins harassing his drag-racing pals, all hell breaks loose. One of the cyclists is sent hurtling over a cliff, after which Rick gets the blame.
+          p.card-text.text-justify-content-center TEXT HERE...
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -148,13 +143,12 @@ block content
       br
       br
       .row
-        .card
+        .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center La Dolce Vita (1960)
-          img.img-responsive.mx-auto.d-block(src="./images/mp11.jpg", style="width:35%", alt="La Dolce Vita poster")
+          h4.card-title-text.text-warning.text-center Anatomy Of A Murder (YEAR)
+          img.img-responsive.mx-auto.d-block(src="./images/mp11.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center
-            | In Federico Fellini's lauded Italian film, restless reporter Marcello Rubini (Marcello Mastroianni) drifts through life in Rome. While Marcello contends with the overdose taken by his girlfriend, Emma (Yvonne Furneaux), he also pursues heiress Maddalena (Anouk Aimée) and movie star Sylvia (Anita Ekberg), embracing a carefree approach to living. Despite his hedonistic attitude, Marcello does have moments of quiet reflection, resulting in an intriguing cinematic character study.
+          p.card-text.text-justify-content-center TEXT HERE...
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -171,13 +165,12 @@ block content
       br
       br
       .row
-        .card
+        .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Vertigo (1958)
-          img.img-responsive.mx-auto.d-block(src="./images/mp12.jpg", style="width:35%", alt="Vertigo poster")
+          h4.card-title-text.text-warning.text-center 12 Angry Men (YEAR)
+          img.img-responsive.mx-auto.d-block(src="./images/mp12.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center
-            | Hitchcock's romantic story of obsession, manipulation and fear. A detective is forced to retire after his fear of heights causes the death of a fellow officer and the girl he was hired to follow. He sees a double of the girl, causing him to transform her image onto the dead girl's body. This leads into a cycle of madness and lies.
+          p.card-text.text-justify-content-center TEXT HERE...
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -194,13 +187,12 @@ block content
       br
       br
       .row
-        .card
+        .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Ocean's Eleven (1960)
-          img.img-responsive.mx-auto.d-block(src="./images/mp9.jpg", style="width:35%", alt="Ocean's Eleven")
+          h4.card-title-text.text-warning.text-center The Circus (YEAR)
+          img.img-responsive.mx-auto.d-block(src="./images/mp9.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center
-            | Danny Ocean (Frank Sinatra) calls on some of his World War II buddies -- including Jimmy Foster (Peter Lawford), Sam Harmon (Dean Martin) and Josh Howard (Sammy Davis Jr.) -- to pull off an elaborate New Year's Eve heist at five casinos in Las Vegas. Eleven members of Danny's crew come together to pull off a perfect robbery, but they suffer a series of setbacks when Duke Santos (Cesar Romero), a former gangster, tries to thwart Ocean's plans to disappear with the money.
+          p.card-text.text-justify-content-center TEXT HERE...
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
