--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -10,9 +10,9 @@ html
     
   body
     //- Atomic Films Brand Section
-    .container-fluid#afBrandMotto
+    .container-fluid#af-brand
       .atomicFilms-brand-text.float-left= title
-      .row.py-3
+      .row
         .col-12.col-md-10
     //- Navbar Nav Items
     nav.navbar.navbar-expand-md.navbar-dark
