--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -4,7 +4,9 @@ block content
   //- Movie Synopsis Section
   section.jumbotron.text-center
     .container
-      h1.jumbotron-heading-text= pageHeader.title
+      h1.jumbotron-heading-text= pageHeader.heading
+      br
+      br
       p.lead.text-white= pageHeader.tagline
     br
     br
@@ -13,10 +15,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Casablanca (YEAR)
+          h4.card-title-text.text-warning.text-center
           img.img-responsive.mx-auto.d-block(src="./images/mp1.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -35,10 +37,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center One Flew Over The Cuckoo's Nest (1972)
+          h4.card-title-text.text-warning.text-center
           img.img-responsive.mx-auto.d-block(src="./images/mp2.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -57,10 +59,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center A Clockwork Orange (YEAR)
+          h4.card-title-text.text-warning.text-center
           img.img-responsive.mx-auto.d-block(src="./images/mp3.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -79,10 +81,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Wizard Of Oz (YEAR)
+          h4.card-title-text.text-warning.text-center
           img.img-responsive.mx-auto.d-block(src="./images/mp4.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -101,10 +103,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center The Godfather (YEAR)
+          h4.card-title-text.text-warning.text-center
           img.img-resonsive.mx-auto.d-block(src="./images/mp5.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -123,10 +125,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center 2001: A Space Odyssey (YEAR)
+          h4.card-title-text.text-warning.text-center
           img.img-responsive.mx-auto.d-block(src="./images/mp6.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -145,10 +147,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center Anatomy Of A Murder (YEAR)
+          h4.card-title-text.text-warning.text-center
           img.img-responsive.mx-auto.d-block(src="./images/mp11.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -167,10 +169,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center 12 Angry Men (YEAR)
+          h4.card-title-text.text-warning.text-center
           img.img-responsive.mx-auto.d-block(src="./images/mp12.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
@@ -189,10 +191,10 @@ block content
       .row
         .card.w-100.bg-secondary
           br
-          h4.card-title-text.text-warning.text-center The Circus (YEAR)
+          h4.card-title-text.text-warning.text-center
           img.img-responsive.mx-auto.d-block(src="./images/mp9.jpg", style="width:40%")
           br
-          p.card-text.text-justify-content-center TEXT HERE...
+          p.card-text.text-justify-content-center
           br
           .container
             .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
