--- a/app/app_server/views/movie-list.pug
+++ b/app/app_server/views/movie-list.pug
@@ -4,12 +4,14 @@ block content
   //- Feature Films Section
   section.jumbotron.text-center
     .container
-      h1.jumbotron-heading-text= pageHeader.title
+      h1.jumbotron-heading-text= pageHeader.heading
+      br
+      br
       p.lead.text-white= pageHeader.tagline
     br
     br
     .container
-      .row
+      .row.justify-content-center
         .col-6.col-md-4
           .thumbnail
             img.img-responsive.w-100(src="./images/mp1.jpg")
