--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -3,7 +3,9 @@ extends layout
 block content
   section.jumbotron.text-center
     .container
-      h1.jumbotron-heading-text= pageHeader.title
+      h1.jumbotron-heading-text= pageHeader.heading
+      br
+      br
       p.lead.text-white= pageHeader.tagline
     .card
       .card-body.bg-dark
