--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -9,6 +9,6 @@ block content
       p.lead.text-white= pageHeader.tagline
     .card
       .card-body.bg-dark
-        h4.card-title-text.pb-5.text-justify Nice choice! You've selected a great classic film to enjoy!
+        h4.card-title-text.pb-5.text-justify= pageHeader.message
     br
     br
